--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ body {
     justify-content: center; /* Ensures buttons are centered */
     align-items: center; /* Vertically centers buttons */
     background-color: rgb(61, 81, 107);
+    background: linear-gradient(135deg, #d4d4d4, #ffffff, #b0b0b0);
     padding: 8px 0;
     position: sticky;
     top: 0;
